--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <h1>etch-a-sketch</h1>
   </div>
   <div class="grid"></div>
+  <div class="footer">
+    <button class="regen">Regenerate Grid</button>
+  </div>
 </body>
 </html>
